# SolScout_v1.2

./: docker-compose.yml
 tg_gateway/: CMakeLists.txt  Dockerfile  README.md
 tg_gateway/src/: auth.cpp  auth.hpp  config.hpp  health.cpp  health.hpp  main.cpp  parser.cpp  parser.hpp  poller.cpp  poller.hpp  redis_bus.cpp  redis_bus.hpp  telegram_client.cpp  telegram_client.hpp  util.cpp  util.hpp  webhook_server.cpp  webhook_server.hpp
 tg_gateway/tests/: test_parser.cpp
analytics/: CMakeLists.txt  Dockerfile  README.md
analytics/src/: config.cpp  config.hpp  entry_exit.cpp  entry_exit.hpp  health.cpp  health.hpp  main.cpp  pg_store.cpp  pg_store.hpp  redis_bus.cpp  redis_bus.hpp  regime.cpp  regime.hpp  scoring.cpp  scoring.hpp  signals.cpp  signals.hpp  state.cpp  state.hpp  throttles.cpp  throttles.hpp  util.cpp  util.hpp
analytics/tests/: test_regime.cpp  test_throttles.cpp
env/: analytics.env  ingestor.env  notifier.env  portfolio.env  tg_gateway.env
ingestor/: CMakeLists.txt  Dockerfile  README.md
ingestor/src/: bar_synth.cpp  bar_synth.hpp  health.cpp  health.hpp  impact_model.cpp  impact_model.hpp  jupiter_client.cpp  jupiter_client.hpp  main.cpp  normalize.cpp  normalize.hpp  orca_client.cpp  orca_client.hpp  raydium_client.cpp  raydium_client.hpp  redis_bus.cpp  redis_bus.hpp  solana_rpc_client.cpp  solana_rpc_client.hpp  store_pg.cpp  store_pg.hpp  util.cpp  util.hpp
ingestor/tests/: test_bar_synth.cpp  test_impact_model.cpp  test_normalize.cpp
notifier/: CMakeLists.txt
notifier/src/: audit.cpp  audit.hpp  config.hpp  dedup.cpp  dedup.hpp  formatter.cpp  formatter.hpp  health.cpp  health.hpp  mute_state.cpp  mute_state.hpp  redis_bus.cpp  redis_bus.hpp  throttle.cpp  throttle.hpp
portfolio/: CMakeLists.txt  Dockerfile  README.md
portfolio/src/: cg_client.cpp  cg_client.hpp  dex_client.hpp  health.cpp  health.hpp  jupiter_client.hpp  main.cpp  metadata_cache.cpp  metadata_cache.hpp  postgres_store.cpp  postgres_store.hpp  price_oracle.cpp  price_oracle.hpp  redis_bus.cpp  redis_bus.hpp  rpc_solana.cpp  rpc_solana.hpp  valuation.cpp  valuation.hpp
portfolio/test/: test_valuation.cpp
scripts/: bootstrap.sh
